--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <input type="password" id="password" placeholder="Enter Password" required />
     <button type="submit">Login</button>
   </form>
-  <small>This is a simulated environment for educational purposes only.</small>
+  <small> It may possible that sometimes you won't get the premium </small>.</small>
 
   <script>
     document.getElementById("loginForm").addEventListener("submit", function(e) {
